fixed bg image on mobile, changed link on test server

--- a/less/modules/index-landing.less
+++ b/less/modules/index-landing.less
@@ -496,8 +496,18 @@
 // Mobil
 @media only screen and (max-width: 500px) {
 
+  .bg-background-block {
+    background-color: #007d5d;
+    position: fixed;
+    height: 120%;
+    width: 100%;
+  }
+
   .bg-landing {
     position: fixed;
+    height: 640px;
+    background-position: center;
+    bottom: 0px;
   }
 
   .landing-logo {
@@ -533,7 +543,7 @@
     -o-transform: translate(-50%,0);
     transform: translate(-50%,0);
     padding: 20px 0px;
-    margin: -160px 0px 0px 0px;
+    margin: -140px 0px 0px 0px;
     color: @white-color;
     background: @secondary-color;
   }
@@ -640,6 +650,20 @@
 // =====================================================================
 
 @media only screen and (max-width: 360px) {
+
+  .bg-background-block {
+    background-color: #007d5d;
+    position: fixed;
+    height: 120%;
+    width: 100%;
+  }
+
+  .bg-landing {
+    position: fixed;
+    height: 500px;
+    background-position: center;
+    bottom: 0px;
+  }
 
   // BESTILLE TIME KNAPP SKJEMA
   .landing-popup-order-container {
